# AI_Data_Analysis

./: README.md  app.py  config.py  pyproject.toml
agent/: graph.py  llm_factory.py  prompts.py  state.py
agent/nodes/: analyzer.py  planner.py  reporter.py  visualizer.py
data/uploads/: 5a8bf996_Titanic-Dataset.csv
outputs/reports/: report.docx  report.md
sandbox/: executor.py
static/css/: style.css
templates/: base.html  index.html  results.html
tools/: data_loader.py  profiler.py
