[project]
name = "ai-data-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-ollama>=0.2.0",
    "pandas>=2.2.0",
    "plotly>=5.24.0",
    "python-dotenv>=1.0.0",
    "openpyxl>=3.1.0",
    "kaleido>=0.2.1",
]
