[project]
name = "ai-data-analyst"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-ollama>=0.2.0",
    "pandas>=2.2.0",
    "plotly>=5.24.0",
    "openpyxl>=3.1.0",
    "kaleido>=0.2.1",
    "python-docx>=1.1.0",
    "langchain-groq>=1.1.3",
    "python-dotenv>=1.2.2",
]
